--- a/resources/scss/partials/general.scss
+++ b/resources/scss/partials/general.scss
@@ -11,7 +11,7 @@ body {
         background-color: transparent;
     }
 
-    form {
+    .compilate {
         background-color: rgba(255, 255, 255, 0.45);
         padding: 10px;
         border-radius: 2%;
